<resources>
    <string name="app_name">FragmentApp</string>
    <string name="add">Add</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="pop">Pop</string>
    <string name="add_to_backstack">Add To BackStack</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="account">Account</string>
</resources>
